--- a/pom.xml
+++ b/pom.xml
@@ -146,7 +146,7 @@
     </profiles>
 
     <properties>
-        <revision>10.3.0-SNAPSHOT</revision>
+        <revision>10.1.0</revision>
 
         <!-- Built in properties -->
         <maven.compiler.source>11</maven.compiler.source>
@@ -414,7 +414,7 @@
                     <version>${antlr.version}</version>
                 </plugin>
 
-                <plugin>
+<!--                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-gpg-plugin</artifactId>
                     <version>3.2.6</version>
@@ -427,7 +427,7 @@
                                 </goals>
                             </execution>
                         </executions>
-                    </plugin>
+                    </plugin> -->
                 <plugin>
                     <groupId>org.cyclonedx</groupId>
                     <artifactId>cyclonedx-maven-plugin</artifactId>
