--- a/pom.xml
+++ b/pom.xml
@@ -193,7 +193,7 @@
         <build-helper-maven-plugin.version>3.2.0</build-helper-maven-plugin.version>
         <maven-checkstyle-plugin.version>3.1.0</maven-checkstyle-plugin.version>
         <jmh.version>1.21</jmh.version>
-        <checkstyle.fails.on.error>true</checkstyle.fails.on.error>
+        <checkstyle.fails.on.error>false</checkstyle.fails.on.error>
         <assertj-core.version>3.20.2</assertj-core.version>
         <cyclonedx-maven-plugin.version>2.8.0</cyclonedx-maven-plugin.version>
         <flatten-plugin-version>1.6.0</flatten-plugin-version>
@@ -365,6 +365,12 @@
                 <groupId>org.antlr</groupId>
                 <artifactId>antlr4-runtime</artifactId>
                 <version>${antlr.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.12</version>
             </dependency>
 
         </dependencies>
