disable argLine for surefire

--- a/pom.xml
+++ b/pom.xml
@@ -410,7 +410,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <configuration>
                         <skip>${skipUTs}</skip>
-                        <argLine>${argLine}</argLine>
+                        <!-- <argLine>${argLine}</argLine> -->
                     </configuration>
                 </plugin>
 
